fix: Alignment token icon + pair + ticker

--- a/src/components/organisms/TradeDashboard/TradeMarketSelector/TradeRatesCard/TradeRatesCard.css
+++ b/src/components/organisms/TradeDashboard/TradeMarketSelector/TradeRatesCard/TradeRatesCard.css
@@ -38,6 +38,10 @@
   font-size: 0.8rem;
 }
 
+.rb_text_1 > div {
+  display: flex;
+}
+
 .rb_text_1 strong {
   color: white;
   font-size: 0.9rem;
@@ -45,7 +49,6 @@
 
 .rb_text_1 p {
   color: #94a2c9;
-  margin-left: 1.7rem;
 }
 
 .rb_text_2 h1 {
